blog layout bug fixed.

--- a/assets/theme-styles/blog-layouts/forest-smiley.less
+++ b/assets/theme-styles/blog-layouts/forest-smiley.less
@@ -68,6 +68,9 @@
       a{
         color: @background;
         top:70px;
+        width: 60%;
+        text-align: center;
+        line-height: 1.3;
       }
 
     }
